Fix text overflow for notebook names

--- a/react-app/src/components/NotebookView/NotebookView.css
+++ b/react-app/src/components/NotebookView/NotebookView.css
@@ -18,3 +18,9 @@
 #note-book-actions-container > i {
     margin: 6px;
 }
+
+#notebook-details-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
